@@ -106,6 +106,7 @@ enum guCommandIds {
     ID_PLAYER_PLAYLIST_SMART_ADDTRACK,
     ID_PLAYER_PLAYLIST_COPYTO,
     ID_PLAYER_PLAYLIST_EDITLABELS,
+    ID_PLAYER_PLAYLIST_EDITTRACKS,
     //
     ID_RADIO_PLAY,
     ID_RADIO_ENQUEUE,
